--- a/src/main/webapp/WEB-INF/resources/css/login.css
+++ b/src/main/webapp/WEB-INF/resources/css/login.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 *,
 *:before,
 *:after{
@@ -13,7 +15,7 @@ body{
 
 .login_form{
     width: 430px;
-    height: 1000px;
+    height: 900px;
     position: absolute;
     transform: translate(-50%,-50%);
     left: 50%;
@@ -48,7 +50,7 @@ form{
     background-color: rgba(255,255,255,0.13);
     position: absolute;
     transform: translate(-50%,-50%);
-    top: 50%;
+    top: 45%;
     left: 50%;
     border-radius: 10px;
     backdrop-filter: blur(10px);
@@ -128,11 +130,11 @@ button{
 }
 
 
-
+/* footer */
 .footer{
 	position: absolute;
   	bottom: 900;
-  	top: 750px;
+  	top: 920px;
   	display: block;
   	background-color: #34333b;
 	width: 100%;
@@ -141,7 +143,7 @@ button{
 	height: 70px; 
 	position: relative;
 	text-align: center;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 }
 .footer_menu > a {
 	display: inline-block;
@@ -156,7 +158,7 @@ button{
     height: 165px;
     width: 800px;
 	text-align: center;
-	margin-left: 400px;
+	margin-left: 600px;
 }
 .footer_logo {
 	width: 200px;
