--- a/src/main/webapp/WEB-INF/resources/css/thboard.css
+++ b/src/main/webapp/WEB-INF/resources/css/thboard.css
@@ -1,24 +1,31 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-* {
-    box-sizing: border-box;
-}
+* {box-sizing: vorder-box;}
 
 body {
-    background-color: #242333;
-    color: white;
+    background-color: #34333b;
+    color: #34333b;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     height: 100vh;
     font-family: 'Lato', sans-serif;
     margin: 0;
+	align-items: center;
 }
 
+.thmain {
+	overflow: auto;
+	height: 800px;
+}
+
+.th_button a {
+	
+}	
+
 .movie-container {
-    margin: 20px 0;
+    margin: 25px 0 8px 0;
 }
 
 .movie-container select {
@@ -33,18 +40,25 @@ body {
     appearance: none;
 }
 
+#movie {
+	text-align: center;
+	font-weight:bold;
+}
+
 .container {
     perspective: 100px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    margin-top: 5px;
 }
 
 .seat {
-    background-color: #444451;
-    height: 12px;
-    width: 15px;
+    background-color: white;
+    height: 15px;
+    width: 17px;
     margin: 3px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    text-align: center;
 }
 
 .seat.selected {
@@ -52,7 +66,7 @@ body {
 }
 
 .seat.occupied {
-    background-color: #fff;
+    background-color: #505050;
 }
 
 .seat:nth-of-type(2) {
@@ -75,12 +89,13 @@ body {
 
 .showcase {
     background: rgba(0, 0, 0, 0.1);
-    padding: 5px 10px;
+    padding: 5px 8px;
     border-radius: 5px;
-    color: #777;
+    color: white;
     list-style-type: none;
     display: flex;
     justify-content: space-between;
+    height: 30px;
 }
 
 .showcase li {
@@ -96,6 +111,8 @@ body {
 
 .row {
     display: flex;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 .screen {
@@ -109,8 +126,12 @@ body {
 
 p.text {
     margin: 5px 0;
+    color: white;
 }
 
 p.text span {
     color: #6feaf6;
 }
+
+
+
