--- a/src/main/webapp/WEB-INF/resources/css/base.css
+++ b/src/main/webapp/WEB-INF/resources/css/base.css
@@ -456,12 +456,14 @@ main {
   transform: rotate(-45deg) translate(0, -1px);
 }
 
+.username {
+	color: black;
+}
 
-#menu
-{
+#menu {
   position: absolute;
   width: 300px;
-  height: 1000px;
+  height: 900px;
   margin: -100px 0 0 -55px;
   padding: 30px;
   padding-top: 125px;
