--- a/src/main/webapp/WEB-INF/resources/css/login.css
+++ b/src/main/webapp/WEB-INF/resources/css/login.css
@@ -131,20 +131,23 @@ button{
 
 
 /* footer */
-.footer{
+.footer {
 	position: absolute;
   	bottom: 900;
   	top: 920px;
   	display: block;
   	background-color: #34333b;
 	width: 100%;
+	text-align: center;
 }
+
 .footer_menu {
 	height: 70px; 
 	position: relative;
 	text-align: center;
 	margin-bottom: 20px;
 }
+
 .footer_menu > a {
 	display: inline-block;
 	line-height: 78px;
@@ -153,28 +156,32 @@ button{
     position: relative;
 	color: white;
 }
+
 .footer_txt {
     display: inline-block;
     height: 165px;
     width: 800px;
-	text-align: center;
-	margin-left: 600px;
+	margin-left: 100px;
 }
+
 .footer_logo {
-	width: 200px;
 	height: 200px;
 	display: inline-block;
 	text-align: center;
 }
+
 .flogo {
 	width: 160px;
 	height: 160px;	
 }
+
 .footxt {
     margin-left: 50px;
+    margin-top: 30px;
     width: 500px;
     height:120px;
     display: inline-block;
+    vertical-align: top;
   	text-align: left;
 }
 
