--- a/src/main/webapp/WEB-INF/resources/css/signup.css
+++ b/src/main/webapp/WEB-INF/resources/css/signup.css
@@ -73,6 +73,7 @@ button{
   	display: block;
   	background-color: #34333b;
 	width: 100%;
+	text-align: center;
 }
 .footer_menu {
 	height: 70px; 
@@ -92,11 +93,9 @@ button{
     display: inline-block;
     height: 165px;
     width: 800px;
-	text-align: center;
-	margin-left: 600px;
+	margin-left: 100px;
 }
 .footer_logo {
-	width: 200px;
 	height: 200px;
 	display: inline-block;
 	text-align: center;
@@ -107,9 +106,11 @@ button{
 }
 .footxt {
     margin-left: 50px;
+    margin-top: 15px;
     width: 500px;
     height:120px;
     display: inline-block;
   	text-align: left;
+  	vertical-align: top;
 }
 
