--- a/src/main/webapp/WEB-INF/resources/css/theater.css
+++ b/src/main/webapp/WEB-INF/resources/css/theater.css
@@ -216,3 +216,93 @@ body {
 	line-height: 22px;
 	margin: 18px 20px 12px 20px;
 }
+
+
+table {
+	border: 1px solid #444444;
+	margin-left: 700px;
+	width: 500px;
+	height: 500px;
+	margin-top: -500px;
+	
+}
+
+tr, td {
+	border: 1px solid #444444;
+}
+
+.img {
+	margin-left: 200px;
+	margin-top: 100px;
+}
+.tab-section {
+	height: auto;
+}
+#cimg {
+	width: 850px;
+}
+.booking{
+	margin-left: 1000px;
+}
+
+
+
+
+/* 추가 부분 */
+h1 { font-family: 'Pacifico', sans-serif; font-size: 2em; }
+p { font-family: Helvetica, Arial, sans-serif;}
+
+.jsOff ul#tabs {
+  line-height: 1.5;
+  margin: 1.125em 0;
+}
+
+.jsOn .tab-section {
+  display: none;
+}
+
+.jsOn ul#tabs {
+  border-bottom-style: solid;
+  border-bottom-color: #a0d468;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  font-size: 1.5em;
+}
+
+.jsOn ul#tabs:after {
+  clear: both;
+  content: '';
+  display: table;
+}
+
+.jsOn ul#tabs li {
+  display: block;
+  float: left;
+}
+
+.jsOn ul#tabs a {
+  border-right: 1px solid #8cc152;
+  color: white;
+  display: block;
+  padding: 0.5em 1.125em;
+  text-decoration: none;
+}
+
+.jsOn ul#tabs li:first-child a {
+  border-top-left-radius: 7px;  
+}
+
+.jsOn ul#tabs a:hover {
+  background: #8cc152;
+}
+
+.jsOn .tab-section {
+  color: #444;
+  padding: 2em;
+  margin: 0 auto;
+}
+
+.jsOn .tab-section h2 {
+  margin-top: 0;
+}
+
