--- a/src/main/webapp/WEB-INF/resources/css/mypage.css
+++ b/src/main/webapp/WEB-INF/resources/css/mypage.css
@@ -12,18 +12,15 @@ body{
     overflow: auto;
 }
 
-.memberinfo {
-	height:900px;
+.reviewlist, .bookinglist, .memberinfo{
+	height:auto;
+	width:70%;
+	margin: 0 auto 50px auto;
+	text-align: center;
 }
 
-.member {
-	width:70%; 
+h2 {
 	text-align:left;
-}
-
-#h {
-	font-size:20px; 
-	font-weight:bolder;
 }
 
 hr {
