--- a/src/main/webapp/WEB-INF/resources/css/theater.css
+++ b/src/main/webapp/WEB-INF/resources/css/theater.css
@@ -1,4 +1,135 @@
-footer {
+@charset "UTF-8";
+*,
+*:before,
+*:after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+	overflow: auto;
+	background-color: #34333b;
+	height: auto;
+}
+
+.thdetail {
+	overflow: auto;
+}
+
+.thdetail_header {
+	width: 1400px;
+	margin: 100px auto 0 auto;
+}
+
+.thdetail_info {
+	width: 1400px;
+	margin: 60px auto;
+	display: block;
+	height: 700px;;
+}
+
+#pimg {
+	margin: 2%;
+	float: left;
+	width: 500px;
+    height: 650px;
+}
+
+.img {
+	margin-left: 200px;
+	margin-top: 100px;
+}
+
+#info {
+	margin-top: 3%;
+	margin-right: 300px;
+	float: right;
+}
+
+table {
+	border-collapse: collapse;
+	width: 500px;
+	height:450px;
+}
+
+
+.tab-section {
+	height: auto;
+}
+#cimg {
+	width: 850px;
+}
+.booking{
+	margin: 60px auto;
+	text-align:center;
+}
+
+
+
+/* ì¶”ê°€ ë¶€ë¶„ */
+h1 { font-family: 'Pacifico', sans-serif; font-size: 2em; }
+p { font-family: Helvetica, Arial, sans-serif;}
+
+.jsOff ul#tabs {
+  line-height: 1.5;
+  margin: 1.125em 0;
+}
+
+.jsOn .tab-section {
+  display: none;
+}
+
+.jsOn ul#tabs {
+  border-bottom-style: solid;
+  border-bottom-color: #a0d468;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  font-size: 1.5em;
+  width: 1400px;
+  margin: 60px auto;
+}
+
+.jsOn ul#tabs:after {
+  clear: both;
+  content: '';
+  display: table;
+}
+
+.jsOn ul#tabs li {
+  display: block;
+  float: left;
+}
+
+.jsOn ul#tabs a {
+  border-right: 1px solid #8cc152;
+  color: white;
+  display: block;
+  padding: 0.5em 1.125em;
+  text-decoration: none;
+}
+
+.jsOn ul#tabs li:first-child a {
+  border-top-left-radius: 7px;  
+}
+
+.jsOn ul#tabs a:hover {
+  background: #8cc152;
+}
+
+.jsOn .tab-section {
+  color: #444;
+  padding: 2em;
+  margin: 0 auto;
+}
+
+.jsOn .tab-section h2 {
+  margin-top: 0;
+}
+
+
+/* footer */
+.footer {
 	height: 350px;
 }
 
@@ -45,264 +176,3 @@ footer {
 	display: inline-block;
 	text-align: left;
 }
-
-body {
-	overflow: auto;
-	background-color: #34333b;
-}
-
-.concert {
-	margin: 50px 0;
-}
-
-.slider-container {
-	margin-top: 100px;
-	margin-right: auto;
-	margin-left: auto;
-	max-width: 1000px;
-	height: 600px;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-
-.image-video-slide .inner {
-	position: relative;
-	display: block;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	opacity: 1;
-	transition: all 300ms ease;
-	overflow: hidden;
-}
-
-.image-video-slide .inner {
-	margin: 0px;
-}
-
-.image-video-slide .inner:after {
-	display: block;
-	content: '';
-	padding-bottom: 56.23%;
-}
-
-.image-video-slide.video-slide iframe, .image-video-slide.video-slide object,
-	.image-video-slide.video-slide embed, .image-video-slide.video-slide .youtube-player
-	{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
-.image-video-slide.video-slide .inner iframe:after, .image-video-slide.video-slide .inner .youtube-player:after
-	{
-	content: '';
-	display: block;
-	padding-bottom: 56%;
-}
-
-.image-video-slider .slick-prev, .image-video-slider .slick-next {
-	z-index: 10000;
-}
-
-.image-video-slider .slick-prev:before, .image-video-slider .slick-next:before
-	{
-	color: #50a9dd !important;
-}
-
-/* LazyLoad YouTube */
-.image-video-slider .youtube-player iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 100;
-	background: transparent;
-}
-
-.image-video-slider .youtube-player img {
-	bottom: 0;
-	display: block;
-	left: 0;
-	margin: auto;
-	max-width: 100%;
-	width: 100%;
-	position: absolute;
-	right: 0;
-	top: 0;
-	border: none;
-	height: auto;
-	cursor: pointer;
-	-webkit-transition: .4s all;
-	-o-transition: .4s all;
-	-moz-transition: .4s all;
-	transition: .4s all;
-}
-
-.image-video-slider .youtube-player img:hover {
-	-webkit-filter: brightness(75%);
-}
-
-.image-video-slider .youtube-player .play {
-	height: 72px;
-	width: 72px;
-	left: 50%;
-	top: 50%;
-	margin-left: -36px;
-	margin-top: -36px;
-	position: absolute;
-	background: url("//i.imgur.com/TxzC70f.png") no-repeat;
-	cursor: pointer;
-}
-
-@media ( min-width : 500px ) {
-	.image-video-slide .inner {
-		opacity: 0.8;
-	}
-	.image-video-slide .inner {
-		margin: 10px;
-	}
-	.image-video-slider .slick-prev {
-		left: -46px;
-	}
-	.image-video-slider .slick-prev:before, .image-video-slider .slick-next:before
-		{
-		font-size: 40px !important;
-	}
-	.image-video-slide.slick-center .inner {
-		opacity: 1;
-	}
-}
-
-.contentmain {
-	width: 900px;
-	margin: 0 auto;
-	font-size: 0;
-	padding-bottom: 100px;
-	text-align: center;
-}
-
-.contentel {
-	width: 100%;
-	height: 70px;
-	background: #fff;
-	text-align: center;
-	border-top: 1px solid #ddd;
-}
-
-.contenta {
-	display: inline-block;
-	width: 264px;
-	height: 360px;
-	margin: 15px 15px;
-	border: 1px solid #ddd;
-	vertical-align: top;
-}
-
-.contentimg {
-	display: inline-block;
-	width: 264px;
-	height: 360px;
-	border: 1px solid #ddd;
-	vertical-align: top;
-}
-
-.contentp {
-	font-size: 16px;
-	color: #333;
-	line-height: 22px;
-	margin: 18px 20px 12px 20px;
-}
-
-
-table {
-	border: 1px solid #444444;
-	margin-left: 700px;
-	width: 500px;
-	height: 500px;
-	margin-top: -500px;
-	
-}
-
-tr, td {
-	border: 1px solid #444444;
-}
-
-.img {
-	margin-left: 200px;
-	margin-top: 100px;
-}
-.tab-section {
-	height: auto;
-}
-#cimg {
-	width: 850px;
-}
-.booking{
-	margin-left: 1000px;
-}
-
-
-
-
-/* Ãß°¡ ºÎºÐ */
-h1 { font-family: 'Pacifico', sans-serif; font-size: 2em; }
-p { font-family: Helvetica, Arial, sans-serif;}
-
-.jsOff ul#tabs {
-  line-height: 1.5;
-  margin: 1.125em 0;
-}
-
-.jsOn .tab-section {
-  display: none;
-}
-
-.jsOn ul#tabs {
-  border-bottom-style: solid;
-  border-bottom-color: #a0d468;
-  border-top-left-radius: 7px;
-  border-top-right-radius: 7px;
-  font-size: 1.5em;
-}
-
-.jsOn ul#tabs:after {
-  clear: both;
-  content: '';
-  display: table;
-}
-
-.jsOn ul#tabs li {
-  display: block;
-  float: left;
-}
-
-.jsOn ul#tabs a {
-  border-right: 1px solid #8cc152;
-  color: white;
-  display: block;
-  padding: 0.5em 1.125em;
-  text-decoration: none;
-}
-
-.jsOn ul#tabs li:first-child a {
-  border-top-left-radius: 7px;  
-}
-
-.jsOn ul#tabs a:hover {
-  background: #8cc152;
-}
-
-.jsOn .tab-section {
-  color: #444;
-  padding: 2em;
-  margin: 0 auto;
-}
-
-.jsOn .tab-section h2 {
-  margin-top: 0;
-}
-
