--- a/src/main/webapp/WEB-INF/resources/css/a_performance.css
+++ b/src/main/webapp/WEB-INF/resources/css/a_performance.css
@@ -112,6 +112,12 @@ hr {
   opacity: 0.25;
 }
 
+#detail {
+	color: #34333b;
+	text-decoration: none;
+    outline: none;
+}
+
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
