--- a/src/main/webapp/WEB-INF/resources/css/concert_detail.css
+++ b/src/main/webapp/WEB-INF/resources/css/concert_detail.css
@@ -7,6 +7,7 @@
 
 #review-container {
 	color: white;
+	margin-top: 50px;
 }
 
 .review-item, #rcontent {
@@ -33,3 +34,4 @@
     border-radius: 2rem;
     cursor: pointer;
 }
+
