--- a/src/main/webapp/WEB-INF/resources/css/theater.css
+++ b/src/main/webapp/WEB-INF/resources/css/theater.css
@@ -118,9 +118,10 @@ p { font-family: Helvetica, Arial, sans-serif;}
 }
 
 .jsOn .tab-section {
-  color: #444;
+  color: white;
   padding: 2em;
   margin: 0 auto;
+  width:1400px;
 }
 
 .jsOn .tab-section h2 {
