--- a/src/main/webapp/WEB-INF/resources/css/a_performance.css
+++ b/src/main/webapp/WEB-INF/resources/css/a_performance.css
@@ -251,8 +251,8 @@ sup {
 }
 
 a {
-  color: var(--bs-link-color);
-  text-decoration: underline;
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
 }
 a:hover {
   color: var(--bs-link-hover-color);
