--- a/src/main/webapp/WEB-INF/resources/css/concert_detail.css
+++ b/src/main/webapp/WEB-INF/resources/css/concert_detail.css
@@ -7,7 +7,7 @@
 
 #review-container {
 	color: white;
-	margin-top: 50px;
+	margin-top: 80px;
 }
 
 .review-item, #rcontent {
@@ -18,7 +18,7 @@
 	border-radius: 6px;
 	width: 500px;
 	box-shadow: 0 0 4px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .08);
-	margin-bottom:3px;
+	margin-bottom: 20px;
 }
 
 .btn {
@@ -33,5 +33,40 @@
     font-weight: 600;
     border-radius: 2rem;
     cursor: pointer;
+}
+
+.rcontainer {
+	margin-top: 80px;
+	margin-left: 30px;
+	border: 1px solid white;
+	width: 1000px;
+}
+
+/* 별점 */
+#reviewForm fieldset{
+	margin-left: 30px ;
+    display: inline-block;
+    direction: rtl;
+    border:0;
+}
+#reviewForm fieldset legend{
+    text-align: right;
+}
+#reviewForm input[type=radio]{
+    display: none;
+}
+#reviewForm label{
+    font-size: 3em;
+    color: transparent;
+    text-shadow: 0 0 0 #f0f0f0;
+}
+#reviewForm label:hover{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+}
+#reviewForm label:hover ~ label{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+}
+#reviewForm input[type=radio]:checked ~ label{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
 }
 
