--- a/src/main/webapp/WEB-INF/resources/css/concert_detail.css
+++ b/src/main/webapp/WEB-INF/resources/css/concert_detail.css
@@ -56,17 +56,17 @@
     display: none;
 }
 #reviewForm label{
-    font-size: 3em;
+    font-size: 2.5em;
     color: transparent;
     text-shadow: 0 0 0 #f0f0f0;
 }
 #reviewForm label:hover{
-    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+    text-shadow: 0 0 0 #CD1F48;
 }
 #reviewForm label:hover ~ label{
-    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+    text-shadow: 0 0 0 #CD1F48;
 }
 #reviewForm input[type=radio]:checked ~ label{
-    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+    text-shadow: 0 0 0 #CD1F48;
 }
 
