--- a/src/main/webapp/WEB-INF/resources/css/a_performance.css
+++ b/src/main/webapp/WEB-INF/resources/css/a_performance.css
@@ -4229,6 +4229,7 @@ textarea.form-control-lg {
   flex: 1 1 auto;
   padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
   color: var(--bs-card-color);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .card-title {
