--- a/src/main/webapp/WEB-INF/resources/css/thmain.css
+++ b/src/main/webapp/WEB-INF/resources/css/thmain.css
@@ -13,21 +13,17 @@ body {
     height: auto;
 }
 
-
-
+/*
 .theater {
-	margin: 50px 0;
 	height: auto;
 }
 
 .slider-container {
-	margin-top: 100px;
-	margin-right: auto;
-	margin-left: auto;
-	max-width: 1000px;
+	margin-top: 30px;
+	max-width: 100%;
 	height: 600px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-left: 50px;
+	padding-right: 50px;
 }
 
 .image-video-slide .inner {
@@ -41,27 +37,10 @@ body {
 	overflow: hidden;
 }
 
-.image-video-slide .inner {
-	margin: 0px;
-}
-
-.image-video-slide .inner:after {
-	display: block;
-	content: '';
-	padding-bottom: 56.23%;
-}
-
-
-.image-video-slider .slick-prev, .image-video-slider .slick-next {
-	z-index: 10000;
-}
-
 .image-video-slider .slick-prev:before, .image-video-slider .slick-next:before
 	{
 	color: #50a9dd !important;
 }
-
-
 
 @media ( min-width : 500px ) {
 	.image-video-slide .inner {
@@ -81,6 +60,113 @@ body {
 		opacity: 1;
 	}
 }
+*/
+
+
+.slider {
+	max-width: 100%;
+	height: auto;
+    margin: 0 auto;
+    margin-top: -70px;
+    position: relative;
+}
+
+.slide-viewer {
+    position: relative;
+    overflow: hidden;
+    height: 800px;
+}
+
+.slide-group {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.slide {
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: absolute;
+    margin-top: 5rem;
+    }
+
+.slide:first-child {display: block;}
+.slide img {width: 100%;}
+
+/* slide-nav */
+.slide-nav {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+}
+.slide-nav .prev, .slide-nav .next {
+    width: 40px;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.205);
+    position: absolute;
+    cursor: pointer;
+    z-index: 2;
+}
+.slide-nav .prev {
+    left: 0;
+}
+.slide-nav .next {
+    right: 0;
+}
+.slide-nav .prev::before, .slide-nav .prev::after, .slide-nav .next::before, .slide-nav .next::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(50% 50%);
+    width: 24px;
+    height: 2px;
+    background-color: white;
+    z-index: 3;
+}
+.slide-nav .prev::before {
+    transform-origin: 0 50%;
+    transform: rotate(50deg) translate(-1px, -1px);
+}
+.slide-nav .prev::after {
+    transform-origin: 0 50%;
+    transform: rotate(-50deg);
+}
+.slide-nav .next::before {
+    transform-origin: 100% 50%;
+    transform: rotate(50deg);
+}
+.slide-nav .next::after {
+    transform-origin: 100% 50%;
+    transform: rotate(-50deg) translate(1px, -1px);
+}
+
+/* button */
+.slide-buttons {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.slide-btn {
+  border: none;
+  background: none;
+  color: #000;
+  font-size: 200%;
+  line-height: 0.5em;
+  outline: none;
+}
+
+.slide-btn.active, .slide-btn:hover {
+  color: #ed8e6c;
+  cursor: pointer;
+}
+
+
+
 
 
 .contentmain {
@@ -128,10 +214,6 @@ body {
 	line-height: 22px;
 	margin: 18px 20px 12px 20px;
 }
-
-
-
-
 
 
 /* footer */
