--- a/src/main/webapp/WEB-INF/resources/css/mypage.css
+++ b/src/main/webapp/WEB-INF/resources/css/mypage.css
@@ -7,228 +7,17 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 body{
     background-color: #34333b;
     overflow: auto;
-}
-/* 
-.mypage {
-   height:auto;
-}
-.reviewlist, .concertList, 
-.memberinfo, .theaterList, 
-.exhibitionList{
-   height:auto;
-   width:70%;
-   margin: 0 auto 100px auto;
-   text-align: center;
+    overflow-x: hidden;
 }
 
-h2 {
-   text-align:left;
+.memberinfo, .reviewlist,
+.concertList, .theaterList, .exhibitionList {
+	margin-top: 120px;
 }
-
-hr {
-   background-color:black; 
-   height:2px;
-}
-
-td {
-   width: 200px;
-}
- */
- 
- /* 
-.mypage {
-      background-color: #34333b;
-      padding: 20px;
-      border-radius: 8px;
-   }
-
-   .memberinfo {
-      margin-bottom: 30px;
-   }
-
-   .memberinfo h2 {
-      font-size: 24px;
-      color: white;
-      margin-bottom: 10px;
-   }
-
-   .memberinfo table {
-      width: 100%;
-      border-collapse: collapse;
-   }
-
-   .memberinfo table td {
-      padding: 10px;
-      border: 1px solid #ccc;
-   }
-
-   .memberinfo button {
-      padding: 8px 20px;
-      background-color: #333;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      margin-top: 10px;
-      cursor: pointer;
-   }
-
-   .reviewlist,
-   .concertList,
-   .theaterList,
-   .exhibitionList {
-      margin-bottom: 30px;
-   }
-
-   .reviewlist h2,
-   .concertList h2,
-   .theaterList h2,
-   .exhibitionList h2 {
-      font-size: 24px;
-      color: white;
-      margin-bottom: 10px;
-   }
-
-   .reviewlist table,
-   .concertList table,
-   .theaterList table,
-   .exhibitionList table {
-      width: 100%;
-      border-collapse: collapse;
-   }
-
-   .reviewlist table th,
-   .reviewlist table td,
-   .concertList table th,
-   .concertList table td,
-   .theaterList table th,
-   .theaterList table td,
-   .exhibitionList table th,
-   .exhibitionList table td {
-      padding: 10px;
-      border: 1px solid #ccc;
-   }
-
-   .reviewlist table th {
-      background-color: #f2f2f2;
-      font-weight: bold;
-   }
-
-   .reviewlist table td:nth-child(3),
-   .reviewlist table td:nth-child(6),
-   .concertList table td:nth-child(6),
-   .theaterList table td:nth-child(6),
-   .exhibitionList table td:nth-child(6) {
-      text-align: center;
-   }
-
-   .reviewlist table td:nth-child(3) span,
-   .reviewlist table td:nth-child(6) span,
-   .concertList table td:nth-child(6) span,
-   .theaterList table td:nth-child(6) span,
-   .exhibitionList table td:nth-child(6) span {
-      display: inline-block;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      vertical-align: middle;
-   }
-
-   .reviewlist table td:nth-child(3) span,
-   .reviewlist table td:nth-child(6) span {
-      margin-right: 5px;
-   }
-
-   .reviewlist table td:nth-child(3) span:nth-child(1) {
-      background-color: #ff3656;
-   }
-
-   .reviewlist table td:nth-child(3) span:nth-child(2) {
-      background-color: #ff3656;
-   }
-
-   .reviewlist table td:nth-child(3) span:nth-child(3) {
-      background-color: #ff6a4d;
-   }
-
-   .reviewlist table td:nth-child(3) span:nth-child(4) {
-      background-color: #ffd154;
-   }
-
-   .reviewlist table td:nth-child(3) span:nth-child(5) {
-      background-color: #b2e35e;
-   }
-
-   .reviewlist table td:nth-child(3) span:nth-child(6) {
-      color: #ccc;
-   }
-
-   .reviewlist table td:nth-child(6) span {
-      color: #333;
-   }
-
-   .delete-btn {
-      padding: 6px 12px;
-      background-color: #ff3656;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-   }
-
-   .delete-btn:hover {
-      background-color: #e82947;
-   }
-
-   .delete-btn:active {
-      background-color: #c51835;
-   }
-
-   .delete-btn:focus {
-      outline: none;
-   }
-
-   .delete-btn:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
-   }
-
-   .delete-btn:disabled:hover {
-      background-color: #ccc;
-   }
-
-   .delete-btn:disabled:active {
-      background-color: #ccc;
-   }
-
-   .delete-btn:disabled:focus {
-      outline: none;
-   }
-
-   Hover Effect
-   .memberinfo button:hover,
-   .delete-btn:hover {
-      background-color: #222;
-   }
-
-   Active Effect
-   .memberinfo button:active,
-   .delete-btn:active {
-      background-color: #000;
-   }
-
-   Transition Effect
-   .transition {
-      transition: background-color 0.3s ease;
-   }
- */
- 
- .memberinfo, .reviewlist,
- .concertList, .theaterList, .exhibitionList {
-    margin-top: 120px;
- }
  
 .memberbtn {
    text-align: right;
@@ -243,12 +32,13 @@ td {
 h2 {
   color: white;
   font-size: 20px;
+  margin-bottom: 10px;
 }
 
 hr {
   border: none;
   border-top: 1px solid #ccc;
-  margin: 10px 0;
+  margin: 2px 0;
 }
 
 table {
@@ -262,8 +52,13 @@ th, td {
   text-align: center;
 }
 
+table td:first-child {width: 150px;}
+
+#name, #birth, #phone, #email {width:300px;}
+
+#membertable {width:80%;margin:0 auto;}
+
 th {
-  
   font-weight: bold;
 }
 
@@ -285,6 +80,7 @@ tr:hover {
   margin: 4px 2px;
   cursor: pointer;
   transition: background-color 0.3s;
+  border-radius: 20px;
 }
 
 .listbtn_wr:hover, .delete-btn:hover {
@@ -323,13 +119,12 @@ tr:hover {
 
 /* footer */
 .footer {
-   position: absolute;
-     bottom: 900;
-     
-     display: block;
-     background-color: #34333b;
-   width: 100%;
-   text-align: center;
+	position: absolute;
+	bottom: 900;
+	display: block;
+	background-color: #34333b;
+	width: 100%;
+	text-align: center;
 }
 
 .footer_menu {
@@ -375,3 +170,150 @@ tr:hover {
     vertical-align: top;
      text-align: left;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@import url(https://weloveiconfonts.com/api/?family=typicons);
+@import url(https://fonts.googleapis.com/css?family=Exo:500,700);
+
+/* typicons */
+[class*="typicons-"]:before {
+  font-family: 'Typicons', sans-serif;
+}
+
+
+#vcard {
+  margin: 0 auto;
+  width: 100%;
+  height: 300px;
+  background: #31A66C;
+  border-radius: 4px;
+  box-shadow: 0px 5px 15px rgba(0,0,0, .3);
+}
+#card-content {
+  width:89%;
+  float: left;
+  height: 100%;
+  
+}
+#side-bar {
+  width: 125px;
+  float: right;
+  background: #fff;
+  height: 100%;
+  border-radius: 0 4px 4px 0;
+  box-shadow: -5px 0px 15px rgba(0,0,0, .3);
+}
+#profile {
+  
+  height: 200px;
+  border-bottom: solid 1px rgba(255,255,255,.2);
+}
+
+#options ul {
+  margin: 0;
+  padding: 0;
+}
+#options ul li{
+  text-align: center;
+  font-family: Exo;
+  font-size: 14px;
+  color: white;
+  list-style-type: none;
+  display: inline-block;
+  float: left;
+  width: 250px;
+  height: 100px;
+  border-right: solid 1px rgba(255,255,255,.2);
+  text-shadow: 1px 1px 3px rgba(0,0,0,.3);
+}
+#options ul li:last-child{
+  border-right: none;
+}
+#options ul li span.icon {
+  display: block;
+  margin-top: 25px;
+  color: white;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+#btn {
+  margin-top: 50px;
+}
+#side-bar ul li{
+  text-align: center;
+  font-family: Exo;
+  font-size: 12px;
+  color: #414141;
+  list-style-type: none;
+  display: inline-block;
+  float: left;
+  width: 125px;
+  margin: 65px 0;
+  
+}
+a {
+	color: #34333b;
+	font-weight: bold;
+}
+#side-bar ul li:last-child{
+  border-bottom: none;
+}
+#side-bar ul li span.icon {
+  display: block;
+  margin-top: 25px;
+  color: #414141;
+  font-size: 36px;
+  line-height: 32px;
+}
+
+#profile {
+  padding-top: 50px;
+  text-align: center;
+  overflow: hidden;
+}
+span.avatar span.icon{
+  display: inline-block;
+  color: #414141;
+  font-size: 72px;
+  line-height: 100px;
+  background: #46af7b;
+  border: solid 3px rgba(255,255,255, .2);
+  overflow: hidden;
+  padding-top: 1px;
+  width: 90px;
+  height: 90px;
+  border-radius: 46px;
+}
+span.info {
+  padding-top: 10px;
+  display: block;
+  font-family: Exo;
+  font-size: 18px;
+  color: rgba(255,255,255, .7);
+  font-weight: normal;
+  text-shadow: 1px 1px 3px rgba(0,0,0,.3);
+}
+
