--- a/src/main/webapp/WEB-INF/resources/css/theater.css
+++ b/src/main/webapp/WEB-INF/resources/css/theater.css
@@ -11,6 +11,7 @@ body {
 	overflow: auto;
 	background-color: #34333b;
 	height: auto;
+	overflow-x: hidden;
 }
 
 .thdetail {
@@ -102,7 +103,6 @@ p { font-family: Helvetica, Arial, sans-serif;}
 }
 
 .jsOn ul#tabs a {
-  border-right: 1px solid #8cc152;
   color: white;
   display: block;
   padding: 0.5em 1.125em;
@@ -119,7 +119,7 @@ p { font-family: Helvetica, Arial, sans-serif;}
 
 .jsOn .tab-section {
   color: white;
-  padding: 2em;
+  padding-bottom: 2em;
   margin: 0 auto;
   width:1400px;
 }
@@ -127,7 +127,6 @@ p { font-family: Helvetica, Arial, sans-serif;}
 .jsOn .tab-section h2 {
   margin-top: 0;
 }
-
 
 /* footer */
 .footer {
