--- a/src/main/webapp/WEB-INF/resources/css/a_performance.css
+++ b/src/main/webapp/WEB-INF/resources/css/a_performance.css
@@ -11250,16 +11250,98 @@ body {
   border-radius: 0.375rem !important;
 }
 
-.detailtable{
- margin-right: 300px;
- float: right;
- 
-}
-
-.detailtable1{
-	border: 3px;
+.detail {
+	width: 1200px;
+	margin: 0 auto;	
 }
 
 .detailimg{
+	margin-left: 100px;
 	float: left;
 }
+
+.detailtable{
+ margin-right: 200px;
+ float: right;
+}
+
+.detailtable1{
+	border-top: 2px solid black;
+	border-bottom: 2px solid black;
+	 border-collapse: collapse;
+    width: 100%;
+}
+
+.detailtable1 td:first-child {
+	width: 130px;	
+	text-align: center;
+}
+
+.detailtable1 td:nth-child(2) {
+  width: 350px;
+}
+
+  .detailtable1 td {
+    height:74.5px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .detailtable1 tr:last-child td {
+    border-bottom: none;
+  }
+
+  .detailtable1 td:first-child {
+    font-weight: bold;
+    width: 120px;
+    background-color: #f2f2f2;
+  }
+
+  .detailtable1 td:nth-child(2) {
+    width: 300px;
+    padding-left: 20px;
+  }
+  
+ 
+input[type="text"] {
+	height: 40px;
+	width: 80%;
+}
+
+
+.detailtable3 {
+	border-top: 2px solid black;
+	border-bottom: 2px solid black;
+	 border-collapse: collapse;
+    width: 100%;
+}
+
+.detailtable3 td:first-child {
+	width: 130px;	
+	text-align: center;
+}
+
+.detailtable3 td:nth-child(2) {
+  width: 350px;
+}
+
+  .detailtable3 td {
+    height:67px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .detailtable3 tr:last-child td {
+    border-bottom: none;
+  }
+
+  .detailtable3 td:first-child {
+    font-weight: bold;
+    width: 120px;
+    background-color: #f2f2f2;
+  }
+
+  .detailtable3 td:nth-child(2) {
+    width: 300px;
+    padding-left: 20px;
+  }
