--- a/src/main/webapp/WEB-INF/resources/css/base.css
+++ b/src/main/webapp/WEB-INF/resources/css/base.css
@@ -37,7 +37,6 @@ header {
 	position: sticky;
 	top: 0;
 	background-color: #34333b;
-	border-bottom: 1px solid white;
 	z-index: 10000;
 	width: 100%;
 	display: flex;
@@ -129,7 +128,7 @@ li {
 
 #navbarSupportedContent ul ul a {
 	line-height: 120%;
-	padding: 10px 15px;
+	padding: 15px;
 	color: black;
 }
 
