login/signup css

--- a/src/main/webapp/WEB-INF/resources/css/member/login.css
+++ b/src/main/webapp/WEB-INF/resources/css/member/login.css
@@ -11,7 +11,6 @@ body{
     background-color: #34333b;
     overflow: auto;
     height: 800px;
-    overflow-x:hidden; 
 }
 
 .login_form{
@@ -45,7 +44,8 @@ body{
     right: -30px;
     bottom: -80px;
 }
-form{
+
+#loginform {
     height: 480px;
     width: 400px;
     background-color: rgba(255,255,255,0.13);
@@ -59,14 +59,14 @@ form{
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
     padding: 50px 35px;
 }
-form *{
+#loginform *{
     font-family: 'Poppins',sans-serif;
     color: #ffffff;
     letter-spacing: 0.5px;
     outline: none;
     border: none;
 }
-form h3{
+#loginform h3{
     font-size: 32px;
     font-weight: 500;
     line-height: 42px;
