--- a/src/main/webapp/WEB-INF/resources/css/member/signup.css
+++ b/src/main/webapp/WEB-INF/resources/css/member/signup.css
@@ -5,7 +5,8 @@ body {
 	 background-color:#34333b;
 	 overflow-x:hidden; 
 }
-form {
+
+#signup {
 	height: 920px;
 	width: 40%;
     background-color: rgba(255,255,255,0.13);
@@ -19,11 +20,13 @@ form {
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
     padding: 5px 5px;
 }
+
 fieldset {
 	margin: 0 auto;
 	width: 85%;
 	margin-top: 30px;
 }
+
 input{
 	margin: 0 auto;
     display: block;
@@ -36,20 +39,32 @@ input{
     font-size: 14px;
     font-weight: 300;
 }
+
+::placeholder,
+input[type="date"] {
+	color: #c8c8c8;
+	font-weight: bold;
+}
+
+
+
 input[type="text"]:focus,
 input[type="hidden"]:focus,
 input[type="password"]:focus{
 	background-color: #E8F5FF;
 }
+
 legend {
 	font-size: 28px;
 	font-weight: bold;
 	color: white;
 }
+
 label {
 	color: white;
 	font-weight: bold;
 }
+
 button{
     margin: 10px 0;
     width: 30%;
@@ -61,8 +76,10 @@ button{
     border-radius: 4rem;
     cursor: pointer;
 }
-.signup_footer {
-	margin-top: 900px;
+
+.dup {
+	font-weight:bold; 
+	color:#E8F5FF;
 }
 
 
