--- a/src/main/webapp/WEB-INF/resources/css/booking/bookingsuccess.css
+++ b/src/main/webapp/WEB-INF/resources/css/booking/bookingsuccess.css
@@ -9,7 +9,7 @@ body {
 .container {
 	display: flex;
 	justify-content: space-between;
-	margin: 20px;
+	margin: 40px 20px 20px 20px;
 }
 
 .image {
@@ -19,7 +19,7 @@ body {
 .details {
 	flex-basis: 70%;
 	background-color: #444444;
-	padding: 20px;
+	padding: 50px 20px 20px 20px;
 	border-radius: 5px;
 }
 
