--- a/src/main/webapp/WEB-INF/resources/css/total_ent/concert_booking.css
+++ b/src/main/webapp/WEB-INF/resources/css/total_ent/concert_booking.css
@@ -1,32 +1,34 @@
 @charset "UTF-8";
   body {
     font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
   }
 
   .container {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    margin-top: 50px;
+    margin-top: 85px;
   }
   
   img {
-    width: 300px;
+    width: 390px;
     height: 363px;
     max-width: 100%;
     max-height: 100%;
   }
+  
   .img{
-  	margin-left: 20px;
-    background-color: #f5f5f5;
+    background-color: #fff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    height: 467px;
   }
 
   .info {
     margin-left: 20px;
-    background-color: #f5f5f5;
+    background-color: #fff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -39,19 +41,20 @@
 
   table {
     width: 300px;
-    height: 300px;
+    height: 350px;
     border-collapse: collapse;
     margin-bottom: 20px;
   }
 
   td {
+    width: 120px;
     padding: 10px;
     text-align: center;
   }
-
-  .seatbutton {
+  
+  .seatbutton, button {
     display: block;
-    width: 100%;
+    width: 100px;
     border-radius: 50px;
     padding: 10px 20px;
     background-color: #e74c3c;
@@ -59,6 +62,7 @@
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin: 0 auto;
   }
 
   .seatbutton:hover {
@@ -87,6 +91,7 @@
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    width: 100%;
   }
 
   #nextButton:hover {
