--- a/src/main/webapp/WEB-INF/resources/css/total_ent/total_ent_booking_detail.css
+++ b/src/main/webapp/WEB-INF/resources/css/total_ent/total_ent_booking_detail.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+
+body {
+	font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+}
+
 .container {
 	display: flex;
 	justify-content: center;
@@ -13,6 +19,8 @@
 	padding: 20px;
 	border: 1px solid #e1e1e1;
 	border-radius: 5px;
+	background-color: #fff;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .booking-form img {
