--- a/src/main/webapp/WEB-INF/resources/css/member/popup.css
+++ b/src/main/webapp/WEB-INF/resources/css/member/popup.css
@@ -154,3 +154,111 @@
 .message.error {
 	color: #f44336;
 }
+
+/* 비밀번호 변경 화면 */
+.findpwd {
+	font-family: Arial, sans-serif;
+	background-color: #f2f2f2;
+}
+
+.changepwd {
+	width: 600px;
+	height: 290px;
+	margin: 53px auto;
+	padding: 20px;
+	background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+#pwd_form h1 {
+	font-size: 25px;
+	text-align: center;
+	margin-bottom: 40px;	
+}
+
+#pwd_form table {
+	width: 100%;
+}
+
+#pwd_form table td:first-child {
+	padding-left: 5%;
+	width: 30%;
+}
+	
+
+#pwd_form input[type="text"],
+#pwd_form input[type="password"] {
+	padding: 8px;
+	border-radius: 4px;
+	border: 1px solid #ccc;
+	margin-bottom: 10px;
+	width: 90%;
+}
+
+#pwd_form input[type="button"] {
+	width: 40%;
+	padding: 10px;
+	background-color: #4CAF50;
+	color: #fff;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	font-weight: bold;
+	transition: background-color 0.3s ease;
+}
+
+#pwd_form input[type="button"]:hover {
+	background-color: #45a049;
+}
+
+#text {
+	font-size: 20px;
+	margin: 70px auto;
+	text-align: center;
+}
+
+#text input[type="button"] {
+	margin: 60px auto;
+}
+
+/* 아이디 찾기 결과 */
+.findIdResult {
+	font-family: Arial, sans-serif;
+	background-color: #f2f2f2;
+}
+
+#idResult {
+	width: 600px;
+	height: 290px;
+	margin: 53px auto;
+	padding: 20px;
+	background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+	text-align: center;
+}
+
+#idResult h1 {
+	font-size: 25px;
+	text-align: center;
+	margin: 60px auto;	
+}
+
+#text2 {
+	font-size: 20px;
+	margin: 50px auto 42px auto;
+	text-align: center;
+}
+
+#id_check_form input[type="button"] {
+	width: 40%;
+	padding: 10px;
+	background-color: #4CAF50;
+	color: #fff;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	font-weight: bold;
+	transition: background-color 0.3s ease;
+}
